update .gitignore and run.py

--- a/.gitignore
+++ b/.gitignore
@@ -133,18 +133,10 @@ dmypy.json
 .stylegan2-cache/
 _cudacache
 
-# data folders
-dataset/
-datasets/
-results/
-networks/
+# weights files
 models/
+pytorch_model.bin
 
 # output files
 Pipfile
 out
-*.csv
-
-# BERT models
-pytorch_model.bin
-train_checkpoint.pth
