--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ tags: true
 
 install:
   - sudo apt-get update
-  - pip install -r requirements.txt
 
 script:
-  - echo "TBD"
+  - pip3 install -r requirements.txt
+  - bash scripts/download_weights.sh
