separate stylegan and pose servers

--- a/docker/stylegan_server/Dockerfile
+++ b/docker/stylegan_server/Dockerfile
@@ -25,4 +25,4 @@ RUN ./scripts/download_weights.sh
 
 EXPOSE 5000
 
-CMD python3 run.py production 5000
+CMD python3 run_generator.py production 5000
