--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "style": "export VUE_APP_MODE=0 && vue-cli-service serve",
+    "styleRR": "export VUE_APP_MODE=1 && vue-cli-service serve"
   },
   "dependencies": {
     "aos": "^2.3.4",
