adjust ui deployment to handle different rotate requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
             dockerfile: ./docker/ui/Dockerfile
         ports:
             - "8080:8080"
+        environment:
+            TYPE: $TYPE_ARG
     pose_server:
         image: retratista:pose_server
         build:
